--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: tube2go
-base: core18 # the base snap is the execution environment for this snap
+base: core18
 version: '2.1' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Download youtube videos, playlist and music audio in full HD formats
 description: |
