--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -2,8 +2,7 @@ name: tube2go
 base: core18
 version: '2.1' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Download youtube videos, playlist and music audio in full HD formats
-description: |
-  Tube2Go is a powerful application for downloading youtube videos, playlist and music in 8k, 4k, 2k, 1080p, 720p etc resolutions and supports MP4, WEBM and MP3 formats.
+description: Tube2Go is a powerful GUI application for linux for downloading youtube videos, playlist and music audio in full UHD+ resolutions and supports MP4, WEBM and MP3 formats.
 grade: stable # must be 'stable' to release into candidate/stable channels  / before dev use devel
 confinement: strict # use 'strict' once you have the right plugs and slots / before dev use devmode
 
@@ -73,7 +72,7 @@ parts:
       python-packages: 
           - requests
           - cryptography
-          - git+https://github.com/mytja/pytube
+          - pytube
           - psutil
           - ffmpeg-python
           - python-slugify
