--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,10 +1,10 @@
 name: tube2go
-base: core20
-version: '2024.9.1' # just for humans, typically '1.2+git' or '1.3.2'
+base: core22
+version: '2024.12.1'
 summary: Download videos or playlist or music audio from youtube.com in full HD formats
 description: TUBE2GO is a powerful GUI application for linux for downloading youtube videos, playlist and music audio in full UHD+ resolutions and supports MP4, WEBM and MP3 formats.
-grade: stable # must be 'stable' to release into candidate/stable channels  / before dev use devel
-confinement: strict # use 'strict' once you have the right plugs and slots / before dev use devmode
+grade: stable
+confinement: strict
 
 icon: snap/gui/icon.png
 
@@ -12,7 +12,7 @@ architectures:
   - build-on: [amd64]
 
 environment:
-  SNAP_DESKTOP_RUNTIME: $SNAP/pyqt5-runtime-core20
+  SNAP_DESKTOP_RUNTIME: $SNAP/pyqt5-runtime-core22
 
 apps:
   tube2go:
@@ -52,10 +52,10 @@ plugs:
     interface: content
     target: $SNAP/data-dir/sounds
     default-provider: gtk-common-themes
-  pyqt5-runtime-core20:
+  pyqt5-runtime-core22:
     interface: content
-    target: $SNAP/pyqt5-runtime-core20
-    default-provider: pyqt5-runtime-core20
+    target: $SNAP/pyqt5-runtime-core22
+    default-provider: pyqt5-runtime-core22
 
 
 parts:
@@ -63,7 +63,7 @@ parts:
     plugin: dump
     source: snap_launcher/
     override-build: |
-      snapcraftctl build
+      craftctl default
       sed -i 's|Icon=.*|Icon=${SNAP}/meta/gui/icon.png|g' ${SNAPCRAFT_PART_SRC}/tube2go.desktop
       mkdir -p ${SNAPCRAFT_PART_INSTALL}/usr/share/applications/
       cp -rf ${SNAPCRAFT_PART_SRC}/tube2go.desktop ${SNAPCRAFT_PART_INSTALL}/usr/share/applications/tube2go.desktop
