Update metadata for com.warlordsoftwares.tube2go
Automatically generated:
- Keywords: video downloader, youtube to mp3, online video downloader, download youtube videos, hd video downloader

--- a/share/applications/tube2go.desktop
+++ b/share/applications/tube2go.desktop
@@ -8,5 +8,5 @@ Icon=com.warlordsoftwares.tube2go
 Terminal=false
 Type=Application
 StartupNotify=true
-Keywords=youtube downloader;video downloader;music downloader;playlist downloader;full HD downloader;audio downloader; youtube; youtube music;
+Keywords=video downloader;youtube to mp3;online video downloader;download youtube videos;hd video downloader;
 Categories=Utility;Qt;
