--- a/snap_launcher/tube2go.desktop
+++ b/snap_launcher/tube2go.desktop
@@ -4,7 +4,7 @@ GenericName=tube2go
 Name=TUBE2GO
 Type=Application
 Icon=tube2go.png
-Keywords=youtube downloader;video downloader;music downloader;playlist downloader;full HD downloader;audio downloader; youtube; youtube music;
+Keywords=video downloader;youtube to mp3;online video downloader;download youtube videos;hd video downloader;
 Exec=tube2go %F
 Categories=Utility;Qt;
 Terminal=false
