--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: tube2go
 base: core22
-version: '2025.12.9'
+version: '2025.12.17'
 summary: Download videos or playlist or music audio from youtube.com in full HD formats
 description: TUBE2GO is a powerful GUI application for linux for downloading youtube videos, playlist and music audio in full UHD+ resolutions and supports MP4, WEBM and MP3 formats.
 grade: stable
@@ -59,6 +59,15 @@ plugs:
 
 
 parts:
+  deno:
+    plugin: nil
+    source: https://github.com/denoland/deno/releases/latest/download/deno-x86_64-unknown-linux-gnu.zip
+    source-type: zip
+    override-build: |
+      mkdir -p $SNAPCRAFT_PART_INSTALL/bin
+      cp deno $SNAPCRAFT_PART_INSTALL/bin/deno
+      chmod +x $SNAPCRAFT_PART_INSTALL/bin/deno
+
   snap-launcher:
     plugin: dump
     source: snap_launcher/
